# pwgen

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: action-ci.yml  action.yml
src/: pwgen_cli.py
src/pwgen/: pwgen.py
test/: test_passgen.py
