[project]
name = "pwgen"
version = "0.1"
license = {text = "MIT License"}
readme = "README.md"

requires-python = ">= 3.9"
dependencies = [
    'click',
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "mypy",
    "pwgen",
    "flake8"
]

[build-system]
requires = ["setuptools >= 61.0", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]